# rheedium

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pydoclint-baseline  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  api.html  codecov.yml  genindex.html  index.html  installation.html  jax_validation_pattern.html  objects.inv  populate_wiki.sh  pyproject.toml  search.html  searchindex.js  test_api.html  test_bessel_jit.py
.envs/: linux64_cuda.yaml
.github/badges/: loc.json
.github/workflows/: docs.yml  documentation.yml  loc.yml  test.yml
.ipynb_checkpoints/: README-checkpoint.md
_modules/: index.html
_modules/rheedium/inout/: cif.html  xyz.html
_modules/rheedium/plots/: figuring.html
_modules/rheedium/simul/: simulator.html
_modules/rheedium/types/: crystal_types.html  rheed_types.html
_modules/rheedium/ucell/: bessel.html  helper.html  unitcell.html
_sources/: api.rst.txt  index.rst.txt  jax_validation_pattern.rst.txt
_static/: custom.css  documentation_options.js
automatons/: INDEX.md  README.md  audit_invariants.py  azimuthal_sweep.py  bump_pin.py  convergence_study.py  ensemble_average.py  export_model.py  fit_orientation_beam.py  forward_kinematic.py  forward_multislice.py  forward_reflection.py  growth_monitor.py  invert_structure.py  match_measured_to_simulated.py  parameter_grid.py  recipe_deviation.py  reconstruct_distribution.py  reconstruct_orientation.py  rheed_ingest.py  screen_xyz_ensemble.py
data/: SrTiO3.cif
docs/: build_notebook_cache.py  check_readme_figures.py  export_readme_figures.py  strip_notebook_outputs.py  update_tutorials_index.py
docs/guides/: arbitrary-directions.md  data-wrangling.md  ewald-ctr-tutorial.md  ewald-sphere.md  form-factors.md  index.md  kinematic-scattering.md  layer-control.md  pytree-architecture.md  surface-rods.md  unit-cell.md
docs/source/: api.rst  conf.py  conf_backup.py  conf_simple.py  index.rst  installation.rst  jax_validation_pattern.rst  test_api.rst
docs/source/_autosummary/: rheedium.inout.cif.rst  rheedium.inout.rst  rheedium.inout.xyz.rst  rheedium.plots.figuring.rst  rheedium.plots.rst  rheedium.recon.rst  rheedium.simul.form_factors.rst  rheedium.simul.rst  rheedium.simul.simulator.rst  rheedium.types.crystal_types.rst  rheedium.types.custom_types.rst  rheedium.types.rheed_types.rst  rheedium.types.rst  rheedium.ucell.bessel.rst  rheedium.ucell.helper.rst  rheedium.ucell.rst  rheedium.ucell.unitcell.rst
docs/source/_ext/: param_parser.py  test_links.py
docs/source/_static/: custom.css  custom.js
docs/source/api/: audit.rst  index.rst  inout.rst  modules.rst  plots.rst  recon.rst  rheedium.inout.rst  rheedium.plots.rst  rheedium.recon.rst  rheedium.rst  rheedium.simul.rst  rheedium.types.rst  rheedium.ucell.rst  simul.rst  tests.rst  tools.rst  types.rst  ucell.rst
docs/source/guides/: arbitrary-directions.md  checked-numerical-entry-points.md  data-wrangling.md  differentiable-inversion-with-optimistix.md  ewald-ctr-tutorial.md  ewald-sphere.md  form-factors.md  index.md  jax-transformability.md  kinematic-scattering.md  layer-control.md  parallelization-and-compilation.md  (+4 more)
notebooks/: single_crystal.ipynb
plans/: paper_outline.md
plans/future/: agents_submodule_plan.md  audit_formal_verification_plan.md  automatons_plan.md  defect_diffraction_fidelity_plan.md  hypothesis_testing_plan.md  paper_outline.md  physics.md  rationalization_refactor_plan.md  recon_optax_plan.md  recon_optimization_plan.md
plans/guides/: exposing_tests_in_docs.md  jax_test_type_migration_guide.md
plans/implemented/: automatons_plan.md  distribution_framework_plan.md  jit_runtime_validation_plan.md  parallel_sweeps_plan.md  rationalization_refactor_plan.md  recon_optimization_plan.md  reflection_multislice_plan.md  testing_docs.md
plans/partial/: automatons_plan.md  distribution_framework_plan.md  rationalization_refactor_plan.md  recon_optimization_plan.md  testing_docs.md
schema/: automaton_params.schema.json  automaton_result.schema.json
src/rheedium/: __init__.py  _typing_utils.py  data_io.py  simulator.py  solver.py  unitcell.py
tests/: __init__.py  _assertions.py  _factories.py  _types.py  conftest.py  test_data_io.py  test_unitcell.py
tests/inout/: test_data_io.py
tests/io/: test_data_io.py
tests/test_automatons/: __init__.py  test_loop_a_fixture.py  test_smoke.py
tests/test_data/: MgO.cif  SrTiO3.cif
tests/test_inout/: test_data_io.py
tests/test_rheedium/: __init__.py  test_automatons_smoke.py  test_package_init.py  test_physics_anchors.py  test_see_bidirectional.py  test_test_typing_helpers.py  test_testing_documentation.py
tests/test_types/: test_crystal_types.py  test_rheed_types.py
tests/test_ucell/: test_unitcell.py
tests/ucell/: test_unitcell.py
tutorials/: 01_kinematic_MgO.ipynb  01_kinematic_MgO.py  01_kinematic_MgO.rst  01_kinematic_SrTiO3.ipynb  01_kinematic_SrTiO3.py  01_kinematic_SrTiO3.rst  01_single_crystal.ipynb  02_kinematic_MgO.ipynb  02_kinematic_MgO.py  02_kinematic_MgO.rst  02_kinematic_SrTiO3.ipynb  02_kinematic_SrTiO3.py  02_kinematic_SrTiO3.rst  03_finite_domain.ipynb  03_finite_domain.py  03_finite_domain.rst  03_kinematic_Bi2Se3.ipynb  03_kinematic_Bi2Se3.py  03_kinematic_Bi2Se3.rst  04_bi2se3_temperature.ipynb  04_bi2se3_temperature.py  04_bi2se3_temperature.rst  04_finite_domain.ipynb  04_finite_domain.py  04_finite_domain.rst  05_bi2se3_temp_sweep.ipynb  05_bi2se3_temp_sweep.py  05_bi2se3_temperature.py  05_bi2se3_temperature.rst  05_sto_sweep_viewer.py  06_atomic_visualizer.ipynb  06_atomic_visualizer.py  bi2se3_temp_sweep.ipynb  index.html  index.rst
tutorials/.ipynb_checkpoints/: 01_single_crystal-checkpoint.ipynb  Untitled-checkpoint.ipynb
tutorials/sweeps/: bi2se3_theta2p5_phi_sweep.npz  bi2se3_theta2p5_roughness_sweep.npz  generate_bi2se3_sweeps.py  generate_mgo_sweeps.py  generate_sto_sweeps.py  mgo_theta2p2_phi_sweep.npz  mgo_theta2p2_roughness_sweep.npz  mgo_theta4p5_phi_sweep.npz  mgo_theta4p5_roughness_sweep.npz  sto_theta4_phi_sweep.npz  sto_theta4_roughness_sweep.npz
(+241 files in other folders)
