[project]
name = "rheedium"
version = "2026.6.8"
description = "Differentiable RHEED simulations and Reconstruction in JAX"
authors = [{ name = "Debangshu Mukherjee", email = "mukherjeed@ornl.gov" }]
license = { file = "LICENSE" }
maintainers = [{ name = "Debangshu Mukherjee", email = "mukherjeed@ornl.gov" }]
keywords = [
    "RHEED",
    "MBE",
    "PLD",
    "JAX",
    "Electron Diffraction",
    "Automated Synthesis",
    "Differentiable Programming"
]
readme = "README.md"
requires-python = ">3.11, <3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "jaxtyping>=0.3.0",
    "beartype",
    "numpy>=2.2.1",
    "scipy>=1.14.1",
    "matplotlib>=3.10.0",
    "jax>=0.9.2 ; sys_platform == 'win32'",
    "jax>=0.9.2 ; sys_platform == 'darwin'",
    "jax>=0.9.2 ; sys_platform == 'linux'",
    "ase>=3.26.0",
    "pymatgen>=2025.10.7",
    "h5py>=3.15.1",
    "tifffile>=2026.3.3",
    "equinox>=0.13.8",
    "flatbuffers>=25.12.19",
    "optax>=0.2.8",
    "optimistix>=0.1.0",
    "blackjax>=1.5",
]
[project.optional-dependencies]
cuda = [
   "jax[cuda12]>=0.9.2 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
   "nvidia-cudnn-cu12>=9.5.0 ; platform_machine == 'x86_64' and sys_platform == 'linux'",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=3.0.2",
    "myst-nb>=1.1.2",
    "jupytext>=1.16.0",
    "sphinx-autobuild>=2024.10.3",
    "furo>=2025.7.19",
    "sphinx-autodoc-typehints>=3.0.1",
    "numpydoc>=1.9.0",
    "pydoclint>=0.8.7",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.0.0",
    "chex>=0.1.89",
    "hypothesis>=6.155.2",
]
notebooks = [
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.0",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "nbclient>=0.10.2",
    "jupytext>=1.16.0",
    "myst-nb>=1.1.2",
    "nglview>=3.1.0",
]
dev = [
    "rheedium[docs,test,notebooks]",
    "build>=1.2.2.post1",
    "ruff>=0.12.9",
    "ty>=0.0.27",
    "pyright>=1.1.390",
    "pygount>=3.1.0",
    "pre-commit>=4.5.1",
    "interrogate>=1.7.0",
]
dev_cuda = [
    "rheedium[dev,cuda]",
]
all = [
    "rheedium[docs,test,dev,notebooks,cuda]",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
]

[project.urls]
Homepage = "https://github.com/debangshu-mukherjee/rheedium/"
Documentation = "https://rheedium.readthedocs.io/"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
link-mode = "copy"

[tool.uv.build-backend]
module-name = "rheedium"
namespace = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[tool.jupytext]
formats = "ipynb,py:percent"
cell_metadata_filter = "-trusted"

[tool.pytest.ini_options]
addopts = "-n auto --jaxtyping-packages=rheedium,beartype.beartype"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["rheedium"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
line-length = 79
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs",
]
force-exclude = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 79


[tool.ruff.lint]
select = [
    "D",
    "E", 
    "F", 
    "B", 
    "I", 
    "N", 
    "UP", 
    "ANN", 
    "S", 
    "A", 
    "C4", 
    "PIE", 
    "PT", 
    "RET", 
    "SIM", 
    "ARG", 
    "ERA", 
    "PL"
    ]
ignore = [
    "ANN401",
    "PYI021",
    "F722",
    "COM812",
    "D205",
    "D212",
    "UP037",  # Don't remove quotes from jaxtyping annotations
    "F821",   # jaxtyping dimension variables (N, M, etc.) are intentionally "undefined"
    # Structural to test code, applied uniformly to src and tests:
    "S101",   # `assert` is how pytest tests express expectations
    "PLR2004", # comparing against literal values is idiomatic in assertions
    "PT009",  # unittest-style assertions (chex.TestCase) are used intentionally
    "PLC0415", # imports inside functions guard optional deps / platform branches
    "S314",   # ElementTree parsing of trusted, in-repo test fixtures
    "S310",   # url-open on local file:// fixtures
    "S324",   # md5 used for non-security fixture hashing
    "S603",   # subprocess on trusted, hard-coded commands
    "S607",   # subprocess with partial path to known tools
    "N806",   # scientific symbols (G, dE_E, T) are intentional, as in tutorials
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "jax.numpy.zeros",
    "jax.numpy.ones", 
    "jax.numpy.array",
    "jax.numpy.asarray",
    "jnp.zeros",
    "jnp.ones",
    "jnp.array",
    "jnp.asarray",
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
known-third-party = ["jax", "jaxtyping"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/_types.py" = [
    "UP040",  # Keep Python 3.11-compatible TypeAlias syntax.
]
"tutorials/**/*.py" = [
    "D",      # Notebook scripts: no module/function docstrings required
    "ANN",    # Notebook helper functions can stay lightweight
    "N803",   # Allow scientific variable names like X, Y, Mx as args
    "N806",   # Allow scientific variable names like X, Y, Mx in body
    "E501",   # Long lines in exploratory notebook code
    "F541",   # f-strings without placeholders are common in notebook prints
    "B018",   # Bare expressions are how notebooks display rich outputs
    "B905",   # zip without strict= is fine in tutorial code
    "F841",   # Unused variables are fine in exploratory cells
    "E741",   # Ambiguous variable names (l, I, O) are common in physics
    "PLR2004", # Magic numbers are fine in tutorials
    "I001",   # Jupytext preserves notebook cell import order
    "ERA",    # Commented-out code is acceptable in tutorial notebooks
]

[tool.pydoclint]
style = "numpy"
# pydoclint cannot currently parse jaxtyping shape strings such as
# Float[Array, "H W"] when comparing return annotations to docstring types.
# Keep signature/documentation presence checks active, and let jaxtyping/ty
# validate the actual return types.
check-return-types = false
check-yield-types = true
check-arg-order = true
require-return-section-when-returning = true
require-yield-section-when-yielding = true
baseline = ".pydoclint-baseline"
exclude = "\\.git|\\.tox|tests/"


[tool.ty.environment]
root = ["src/", "."]

[tool.ty.src]
include = ["src", "tests", "docs"]

[tool.ty.rules]
too-many-positional-arguments = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
no-matching-overload = "ignore"
invalid-assignment = "ignore"
invalid-argument-type = "ignore"
unresolved-attribute = "error"

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__", 
    "**/node_modules", 
    "**/.*", 
    ".venv", 
    "build", 
    "dist", 
    "tests", 
    "tutorials"
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportRedeclaration = "none"
reportAssignmentType = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportInvalidTypeForm = "none"
reportUnsupportedDunderAll = "none"
reportAttributeAccessIssue = "none"

[tool.interrogate]
fail-under = 90
style = "sphinx"
exclude = ["build", "dist"]
ignore-init-module = true
quiet = true
